[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deeplens"
version = "0.1.0"
description = "A library to train and use Sparse Autoencoders for mechanistic interpretability"
authors = [{name = "Iñigo Parra", email = "iparra@berkeley.edu"}]
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = {find = {}}